--- a/style.css
+++ b/style.css
@@ -1,7 +1,11 @@
 body {
-  background-color: 
+  background-color: DarkCyan;
 }
 
+.container {
+  background-color: white;
+  padding: 50px 0;
+}
 
 input {
   display: block;
